switch to jade, using z0rch.com layout

--- a/CauchyProblem/index.htm
+++ b/CauchyProblem/index.htm
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Задача Коши</title>
-        <script src="..\jquery.min.js"></script>
-        <script src="..\knockout-2.0.0.js"></script>
+        <script src="http://z0rch.com/js/jquery-1.9.1.min.js"></script>
+        <script src="http://z0rch.com/js/knockout-2.2.1.js"></script>
         <script src="MethodRungeKutti.js"></script>
         <script src="MethodEiler.js"></script>
         <script src="zoomViewModel.js"></script>
@@ -19,7 +19,7 @@
     </head>
 	<body>
       <figure>
-          <img src="../My-photo.png" alt="Maxim Baz" />
+          <img src="http://z0rch.com/img/My-photo.png" alt="Maxim Baz" />
           <figcaption>
               <p>Максим Базь</p>
               <p><a href="http://z0rch.com">http://z0rch.com</a></p>
