--- a/NonlinearEquations/index.htm
+++ b/NonlinearEquations/index.htm
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Решение нелинейных уравнений</title>
-        <script src="../jquery.min.js"></script>
-        <script src="../knockout-2.0.0.js"></script>
+        <script src="http://z0rch.com/js/jquery-1.9.1.min.js"></script>
+        <script src="http://z0rch.com/js/knockout-2.2.1.js"></script>
         <script src="MethodNewton.js"></script>
         <script src="MethodBisection.js"></script>
         <script src="viewModel.js"></script>
@@ -17,7 +17,7 @@
     </head>
 	<body>
       <figure>
-          <img src="../My-photo.png" alt="Maxim Baz" />
+          <img src="http://z0rch.com/img/My-photo.png" alt="Maxim Baz" />
           <figcaption>
               <p>Максим Базь</p>
               <p><a href="http://z0rch.com">http://z0rch.com</a></p>
