--- a/index.html
+++ b/index.html
@@ -1,142 +1,148 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>z0rch.com | Maxim Baz - Numerical Methods</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="z0rch.com - Numerical Methods">
-    <meta name="author" content="Maxim Baz">
+<!DOCTYPE html><html lang="en"><head><title>Maxim Baz - Numerical Methods</title><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="description" content="Maxim Baz - Numerical Methods"><meta name="author" content="Maxim Baz"><link href="http://z0rch.com/css/bootstrap.css" rel="stylesheet"><link href="http://z0rch.com/css/bootstrap-responsive.css" rel="stylesheet"><link href="http://z0rch.com/css/additional.css" rel="stylesheet"><link rel="shortcut icon" href="http://z0rch.com/ico/favicon.ico"><link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://z0rch.com/ico/favicon-144.png"><link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://z0rch.com/ico/favicon-114.png"><link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://z0rch.com/ico/favicon-72.png"><link rel="apple-touch-icon-precomposed" href="http://z0rch.com/ico/favicon-57.png"><!--[if lt IE 9]><script src="http://z0rch.com/js/html5.js"></script><![endif]--><script type="text/javascript">var _gaq = _gaq || [];
+_gaq.push(['_setAccount', 'UA-15874028-3']);
+_gaq.push(['_trackPageview']);
+(function() {
+    var ga = document.createElement('script');
+    ga.type = 'text/javascript';
+    ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(ga, s);
+})();</script></head><body><div class="navbar navbar-fixed-top"><div class="navbar-inner"><div class="container-fluid"><a data-toggle="collapse" data-target=".nav-collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a><a href="http://z0rch.com" class="brand">z0rch.com</a><div class="me pull-right"><ul class="nav"><li><a id="name" href="http://z0rch.com">Maxim Baz</a></li><li><img id="photo" src="http://z0rch.com/img/My-photo-small.png" alt="Maxim Baz"></li></ul></div><div class="nav-collapse"><ul class="nav"><ul class="nav"><li><a href="#labs" data-bind="click: _.partial(flash.do, '#labs')">Numerical Methods</a></li></ul><li><a href="http://z0rch.com#projects" data-bind="click: _.partial(flash.do, '#projects')">All Projects</a></li><li><a href="#contacts" data-bind="click: _.partial(flash.do, '#contacts')">Contacts</a></li></ul></div></div></div></div><div class="container-fluid"><h2><a href="./">Numerical Methods</a></h2><br><div class="row-fluid"><div class="span9"><table id="labs" class="table table-bordered"><thead><tr><th>Title</th><th>Description</th><th>Link</th></tr></thead><tbody data-bind="foreach: labs.list"><tr><td data-bind="text: name"></td><td data-bind="text: description"></td><td><a data-bind="attr: {href: url}" target="_blank" class="btn">Open in new tab</a></td></tr></tbody></table></div><div class="span3"><div id="contacts" class="well sidebar-nav"><ul class="nav nav-list"><li class="nav-header">Contacts</li><!-- ko foreach: contacts.data--><li class="nav-icon"><a data-bind="attr: {href: link}" target="_blank"><div data-bind="attr: {id: id}" class="contact-icon"><span data-bind="text: name" class="contact-text"></span></div></a></li><!-- /ko--></ul></div></div></div></div><script src="http://z0rch.com/js/jquery-1.9.1.min.js"></script><script src="http://z0rch.com/js/jquery-ui.js"></script><script src="http://z0rch.com/js/lodash.min.js"></script><script src="http://z0rch.com/js/knockout-2.2.1.js"></script><script src="http://z0rch.com/js/bootstrap-collapse.js"></script><script type="text/javascript">
+(function() {
+  var __bind = function(fn, me){ return function(){ return fn.apply(me, arguments); }; };
 
-    <!-- Le styles -->
-    <link href="http://z0rch.com/css/bootstrap.css" rel="stylesheet">
-    <link href="http://z0rch.com/css/additional.css" rel="stylesheet">
-    <link href="http://z0rch.com/css/bootstrap-responsive.css" rel="stylesheet">
+  window.Flash = (function() {
+    function Flash() {
+      this["do"] = __bind(this["do"], this);      setTimeout(this["do"]);
+      $(window).on("hashchange", this["do"]);
+    }
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    Flash.prototype["do"] = function(selector) {
+      var element,
+        _this = this;
 
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="http://z0rch.com/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://z0rch.com/ico/favicon-144.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://z0rch.com/ico/favicon-114.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://z0rch.com/ico/favicon-72.png">
-    <link rel="apple-touch-icon-precomposed" href="http://z0rch.com/ico/favicon-57.png">
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-15874028-3']);
-      _gaq.push(['_trackPageview']);
+      if (!_.isString(selector)) {
+        selector = void 0;
+      }
+      element = $(selector || location.hash);
+      if (!this.exists(element)) {
+        return true;
+      }
+      if (this.hashUpdatedUsing(selector)) {
+        return;
+      }
+      this.animate(element);
+      return setTimeout(function() {
+        return _this.scrollTo(element);
+      });
+    };
 
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    </script>
-  </head>
+    Flash.prototype.scrollTo = function(element) {
+      var navbar, offset, y;
 
-  <body>
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="http://z0rch.com">z0rch.com</a>
-          <div class="pull-right">
-            <ul class="nav">
-              <li><a id="name" href="http://z0rch.com">Maxim Baz</a></li>
-              <li><img src="http://z0rch.com/img/My-Photo.png" id="photo" /></li>
-            </ul>
-          </div>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li><a id="navProjects" href="http://z0rch.com#projects">Projects</a></li>
-              <li><a id="navContacts" href="#contacts">Contacts</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+      navbar = $(".navbar");
+      offset = navbar.css("position") !== "fixed" ? 0 : parseInt(navbar.css("height"));
+      y = parseInt(element.offset().top);
+      return scrollTo(pageXOffset, y - offset);
+    };
 
-    <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span3">
-          <div class="well sidebar-nav" id="contacts">
-            <ul class="nav nav-list">
-              <li class="nav-header">Contacts</li>
-              <li class="nav-icon">
-                <a target="_blank" href="mailto:Maxim.Baz@z0rch.com">
-                  <div id="mail-icon" class="contact-icon"><span class="contact-text">Maxim.Baz@z0rch.com</span></div>
-                </a>
-              </li>
-              <li class="nav-icon">
-                <a target="_blank" href="https://github.com/z0rch">
-                  <div id="github-icon" class="contact-icon"><span class="contact-text">github.com/z0rch</span></div>
-                </a>
-              </li>
-              <li class="nav-icon">
-                <a target="_blank" href="http://twitter.com/z0rchcom">
-                  <div id="twitter-icon" class="contact-icon"><span class="contact-text">twitter.com/z0rchcom</span></div>
-                </a>
-              </li>
-              <li class="nav-icon">
-                <a target="_blank" href="http://stackoverflow.com/users/915801/z0rch">
-                  <div id="stackoverflow-icon" class="contact-icon"><span class="contact-text">stackoverflow.com/z0rch</span></div>
-                </a>
-              </li>
-            </ul>
-          </div><!--/.well -->
-        </div><!--/span-->
-        <div class="span9">
-          <h2 id="title">Numerical Methods</h2>
-          <table id="projects" class="table table-bordered">
-            <thead>
-              <tr>
-                <th>Title</th>
-                <th>Description</th>
-                <th>Code</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Interpolations</td>
-                <td>Lagrange's Method and method of Cubic Splines</td>
-                <td><a target="_blank" class="btn" href="http://z0rch.com/University-NumericalMethods/Interpolations">Open in new tab &raquo;</a></td>
-              </tr>
-              <tr>
-                <td>Nonlinear Equations</td>
-                <td>Newton's Method and method of bisection</td>
-                <td><a target="_blank" class="btn" href="http://z0rch.com/University-NumericalMethods/NonlinearEquations">Open in new tab &raquo;</a></td>
-              </tr>
-              <tr>
-                <td>Computing Integral</td>
-                <td>Simpson's Method with error estimate using Runge's method</td>
-                <td><a target="_blank" class="btn" href="http://z0rch.com/University-NumericalMethods/IntegralCompute">Open in new tab &raquo;</a></td>
-              </tr>
-              <tr>
-                <td>Cauchy Problem</td>
-                <td>Eiler's and Runge Kutti's Methods</td>
-                <td><a target="_blank" class="btn" href="http://z0rch.com/University-NumericalMethods/CauchyProblem">Open in new tab &raquo;</a></td>
-              </tr>
-            </tbody>
-          </table>
-        </div><!--/span-->
-      </div><!--/row-->
+    Flash.prototype.exists = function(element) {
+      return !!(element != null ? element.length : void 0);
+    };
 
-    </div><!--/.fluid-container-->
+    Flash.prototype.hashUpdatedUsing = function(selector) {
+      if (!(selector && location.hash !== selector)) {
+        return false;
+      }
+      location.hash = selector;
+      return true;
+    };
 
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://z0rch.com/js/jquery-1.7.2.min.js"></script>
-    <script src="http://z0rch.com/js/bootstrap-transition.js"></script>
-    <script src="http://z0rch.com/js/bootstrap-button.js"></script>
-    <script src="http://z0rch.com/js/bootstrap-collapse.js"></script>
-    <script src="http://z0rch.com/js/additional.js"></script>
-    
-  </body>
-</html>
+    Flash.prototype.animate = function(element) {
+      var previous;
+
+      element.css("backgroundColor", "");
+      previous = element.css("backgroundColor");
+      return element.stop().animate({
+        backgroundColor: "#FFA500"
+      }, 100).animate({
+        backgroundColor: previous
+      }, 1000);
+    };
+
+    return Flash;
+
+  })();
+
+}).call(this);
+</script><script type="text/javascript">
+(function() {
+  var Contact;
+
+  Contact = (function() {
+    function Contact(name, link, id) {
+      this.name = name;
+      this.link = link;
+      this.id = id;
+    }
+
+    return Contact;
+
+  })();
+
+  window.ContactsListViewModel = (function() {
+    function ContactsListViewModel() {
+      this.data = ko.observableArray([new Contact("Maxim.Baz@z0rch.com", "mailto:Maxim.Baz@z0rch.com", "mail-icon"), new Contact("github.com/z0rch", "https://github.com/z0rch", "github-icon"), new Contact("twitter.com/z0rchcom", "http://twitter.com/z0rchcom", "twitter-icon"), new Contact("stackoverflow.com/z0rch", "http://stackoverflow.com/users/915801/z0rch", "stackoverflow-icon")]);
+    }
+
+    return ContactsListViewModel;
+
+  })();
+
+}).call(this);
+</script><script type="text/javascript">
+(function() {
+  var Lab;
+
+  Lab = (function() {
+    function Lab(name, description, url) {
+      this.name = name;
+      this.description = description;
+      this.url = url;
+    }
+
+    return Lab;
+
+  })();
+
+  window.LabsListViewModel = (function() {
+    function LabsListViewModel() {
+      this.list = ko.observableArray([new Lab("Interpolations", "Lagrange's Method and method of Cubic Splines", "./Interpolations"), new Lab("Nonlinear Equations", "Newton's Method and method of bisection", "./NonlinearEquations"), new Lab("Computing Integral", "Simpson's Method with error estimate using Runge's method", "./IntegralCompute"), new Lab("Cauchy Problem", "Eiler's and Runge Kutti's Methods", "./CauchyProblem")]);
+    }
+
+    return LabsListViewModel;
+
+  })();
+
+}).call(this);
+</script><script type="text/javascript">
+(function() {
+  window.AppViewModel = (function() {
+    function AppViewModel() {
+      this.labs = new LabsListViewModel;
+      this.contacts = new ContactsListViewModel;
+      this.flash = new Flash;
+    }
+
+    return AppViewModel;
+
+  })();
+
+}).call(this);
+</script><script type="text/javascript">
+(function() {
+  ko.applyBindings(new AppViewModel);
+
+}).call(this);
+</script></body></html>
