fix photo links

--- a/Interpolations/index.htm
+++ b/Interpolations/index.htm
@@ -11,7 +11,7 @@
     </head>
 	<body>
       <figure>
-          <img src="http://z0rch.com/img/My-photo.png" alt="Maxim Baz" />
+          <img src="http://z0rch.com/img/My-Photo.png" alt="Maxim Baz" />
           <figcaption>
               <p>Максим Базь</p>
               <p><a href="http://z0rch.com">http://z0rch.com</a></p>
